--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "git checkout gh-pages && npm run deploy:build",
+    "deploy:build": "ng build --output-path ../docs --base-href /datenfluesse-online-ads/ && npm run deploy:push",
+    "deploy:push": "git add ../docs && git commit -m 'build: prod build' && git push && git checkout master"
   },
   "private": true,
   "dependencies": {
