--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "deploy": "git checkout gh-pages && npm run deploy:build",
     "deploy:build": "ng build --output-path ../docs --base-href /datenfluesse-online-ads/ && npm run deploy:push",
-    "deploy:push": "git add ../docs && git commit -m 'build: prod build' && git push && git checkout master"
+    "deploy:push": "git add ../docs && git commit -m 'build: prod build' && git push && git checkout main"
   },
   "private": true,
   "dependencies": {
