--- a/data/package.json
+++ b/data/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "papaparse": "^5.3.2"
+    "axios": "^0.27.2",
+    "papaparse": "^5.3.2",
+    "request": "^2.88.2"
   }
 }
