--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "d3": "^7.4.4",
+    "d3-color-legend": "^1.3.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
