--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "d3": "^7.4.4",
     "d3-color-legend": "^1.3.2",
     "rxjs": "~7.5.0",
