--- a/data/package.json
+++ b/data/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
+    "csv": "^6.2.0",
     "papaparse": "^5.3.2",
     "request": "^2.88.2"
   }
