--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "d3": "^7.4.4",
     "d3-color-legend": "^1.3.2",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -37,6 +38,7 @@
     "@angular/cli": "~13.3.1",
     "@angular/compiler-cli": "~13.3.0",
     "@types/d3": "^7.4.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
